--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "redux-persist": "^6.0.0",
-    "yup": "^1.7.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
